--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,4 +1,4 @@
-<article class="py-8">
+<article class="py-8" itemscope itemtype="https://schema.org/BlogPosting">
   {% for block in section.blocks %}
     {% case block.type %}
       {% when 'article_title' %}
@@ -7,14 +7,14 @@
             <a href="{{blog.url}}" class="text-base uppercase text-gray-500 hover:text-gray-900 font-bold">
               {{- blog.title -}}
             </a>
-            <h1 class="text-4xl md:text-6xl font-medium">{{ article.title }}</h1>
+            <h1 class="text-4xl md:text-6xl font-medium" itemprop="headline">{{ article.title }}</h1>
           </div>
         </div>
       {% when 'article_author' %}
         <div class="flex items-center justify-center">
-          <div class="max-w-7xl text-center">
+          <div class="max-w-7xl text-center" itemscope itemtype="http://schema.org/Person">
             {% if section.settings.enable_author %}
-              <small>{{ article.author }}</small>
+              <small itemprop="author">{{ article.author }}</small>
             {% endif %}
           </div>
         </div>
@@ -23,7 +23,7 @@
         <div class="flex items-center justify-center">
           <div class="max-w-7xl text-center">
             {% if section.settings.enable_published_date %}
-              <time datetime="{{article.published_at | date: '%Y-%m-%d' }}">
+              <time itemprop="datePublished dateCreated" datetime="{{article.published_at | date: '%Y-%m-%d' }}">
                 {{ article.published_at | date: format: 'on_date' }}
               </time>
             {% endif %}
@@ -31,11 +31,11 @@
         </div>
 
       {% when 'featured_image' %}
-        <div class="max-w-7xl bg-blue-100 rounder-lg mx-2 md:mx-auto overflow-hidden my-4">
+        <div itemprop="image" class="max-w-7xl bg-blue-100 rounder-lg mx-2 md:mx-auto overflow-hidden my-4">
           {% if article.image != blank %}
             <img
               class="w-full h-80 h-96 object-cover object-center"
-              src="{{ article.image | img_url: 'large' }}"
+              src="{{ article.image | img_url: '2048x2048' }}"
               alt="{{ article.image.alt }}"
             >
           {% else %}
@@ -46,7 +46,7 @@
 
       {% when 'article-content' %}
         <div class="flex items-center justify-center py-6">
-          <div class="max-w-4xl">{{ article.content }}</div>
+          <div itemprop="articlebody" class="max-w-4xl">{{ article.content }}</div>
         </div>
       {% else %}
 
@@ -57,13 +57,51 @@
 {% if blog.comments_enabled? %}
   <div id="comments" class="my-8">
     {% if article.comments_count > 0 %}
+      <div class="flex-1 items-center justify-center mx-auto max-w4xl px-4">
+        <h1 class="text-lg mb-4 font-medium">See what people are saying</h1>
+        {% paginate article.comments by 5 %}
+          {% for comment in article.comments %}
+            <div class="flex-1 border my-4 px-4 py-2 sm:px-6 sm:py-4 leading-relaxed">
+              <span class="comment-author">{{ comment.author }}</span>
+              <span class="text-xs text-gray-400">{{ comment.created_at | date: format: 'on_date' }}</span>
+              <p class="text-sm">{{ comment.content }}</p>
+            </div>
+          {% endfor %}
+          <div class="max-w-6xl mx-auto">
+            {% render 'pagination', pagination: paginate %}
+          </div>
+        {% endpaginate %}
+      </div>
     {% else %}
-      There are no comments in this article
+
     {% endif %}
   </div>
   <div id="comment_form" class="mb-8">
     {% form 'new_comment', article %}
       <div class="flex-1 mx-auto items-center justify-center max-w-4xl px-4">
+        {% if form.errors %}
+          <div class="border p-5">
+            <div class="flex flex-row items-center w-full my-3">
+              {% render 'icon-failed' %}
+            </div>
+
+            <div class="text-sm font-medium ml-3">Oh no, looks like something went wrong. Please try again.</div>
+            <ul class="px-4 mb-3 ml-7 list-decimal">
+              {% for error in form.errors %}
+                <li>
+                  <span>{{ form.errors.message[error] }}</span>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        {% elsif form.posted_successfully? %}
+          <div class="flex flex-row items-center w-full my-3 p-5">
+            <div class="text-green-500">
+              {% render 'icon-success' %}
+            </div>
+            <div class="text-sm font-medium ml-3">Comment is posted successfully</div>
+          </div>
+        {% endif %}
         <div class="px-1 md:flex mb-3">
           <div class="px-3 md:w-1/2">
             <label for="comment_author" class="text-gray-700 font-medium uppercase text xs mb-2">Name</label>
@@ -76,29 +114,75 @@
               required
             >
           </div>
-          <div class="px-3 md:w-1/2"><label for="comment_email" class="text-gray-700 font-medium uppercase text xs mb-2">Email</label>
-          <input
-            type="email"
-            name="comment[email]"
-            id="comment_email"
-            class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
-            placeholder="manan@qayas.com"
-            required
-          ></div>
+          <div class="px-3 md:w-1/2">
+            <label for="comment_email" class="text-gray-700 font-medium uppercase text xs mb-2">Email</label>
+            <input
+              type="email"
+              name="comment[email]"
+              id="comment_email"
+              class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
+              placeholder="manan@qayas.com"
+              required
+            >
+          </div>
         </div>
         <div class="px-1 md:flex mb-3">
           <div class="w-full md:w-full px-3">
             <label for="comment_content" class="text-gray-700 font-medium uppercase text-xs mb-2">Comment</label>
-            <textarea name="comment[body]" id="comment_content" required class="w-full text-gray-700 resize-none h-20 py-2 px-3 focus:outline-none border"></textarea>
+            <textarea
+              name="comment[body]"
+              id="comment_content"
+              required
+              class="w-full text-gray-700 resize-none h-20 py-2 px-3 focus:outline-none border"
+            ></textarea>
           </div>
         </div>
-        <div class="px-1 md:flex mb-3"><div class="md:w-full px-3">
-          <input type="submit" value="Post comment" class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-700">
-        </div></div>
+        <div class="px-1 md:flex mb-3">
+          <div class="md:w-full px-3">
+            <input
+              type="submit"
+              value="Post comment"
+              class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-700"
+            >
+          </div>
+        </div>
       </div>
     {% endform %}
   </div>
 {% endif %}
+
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "BlogPosting",
+    "headline": {{ article.title |  json }},
+    {% if article.image %}
+      "image": [{{ article.image | img_url: "medium" |  prepend: 'https://'  | json }}],
+    {% endif %}
+    "author": {{ article.author | json }},
+    "datePublished": {{ article.published_at | date: format: "default" | json }},
+    "dateModified": {{ article.updated_at |date: format: "default" |  json }},
+    {% if article.excerpt != blank %}
+    "description": {{ article.excerpt | strip_html | strip_newlines | json }},
+    {% endif %}
+
+    "articleBody": {{ article.content | strip_html | strip_newlines | json }},
+    "author": {
+      "@type": "Person",
+      "name": {{ article.author | json }}
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": {{ shop.name | json }},
+      "logo": {
+        "@type": "ImageObject",
+        "url": {{ shop.logo | img_url: "200x200" | prepend: 'https://' | json }},
+        "width": 200,
+        "height": 200
+      }
+    },
+  }
+</script>
 
 {% schema %}
 {
